2/2/12 add model-view transform, specify the ruler length as a function of the max cuvette width
2/2/12 add ruler to view
2/2/12 add Reset All button to 2nd tab, in same location as 1st tab
2/2/12 wrapper for WavelengthControl to use Property<Double>
# 0.00.08 (60959) Feb 2, 2012
2/2/12 add interviews flavor (with data collection enabled) to build.properties
2/2/12 add wavelength control (from piccolo-phet)
2/2/12 add basic light model and view
2/2/12 more work on light controls
2/1/12 intermediate pass at light controls
2/1/12 set up framework for 2nd tab canvas and model
2/1/12 repackage in preparation for starting second tab
2/1/12 ===== begin implementation of "Beer's Law" tab =============================================================
2/1/12 added sim-sharing message for attempt to interact with unmovable meter body
2/1/12 change request: use a minimum view height for a solution with non-zero volume, so that it's visible to the user and detectable by the concentration probe
1/31/12 move symobls to their own file, so that ResourceGenerator can be used for strings and images
1/31/12 add hand cursor to dropper, to indicate that it's movable
1/31/12 until combo box popup can be properly addressed (see #3242), move solute control panel (which includes combo box) to the front
1/31/12 prevent concentration probe from being dragged off the bottom of the stage
# 0.00.07 (60842) Jan 31, 2012
1/31/12 implement reset for Shaker, so it doesn't dispense solute when Reset All resets its location
1/31/12 dispense solute particles when shaker is moving
1/31/12 delete shaker particles when they reach the surface of the solution, add corresponding amount of solute to the solution
1/31/12 handle collisions between solute particles and beaker wall
1/30/12 make solute particles accelerate properly
1/30/12 adjust Solute fields related to particles
1/30/12 create shaker particles with random orientations
1/26/12 make concentration meter expand to fit title